chore: exclude .vscode directory from repository
- Update .gitignore to exclude entire .vscode/ directory
- Remove previously tracked .vscode/mcp.json file
- Keep IDE configurations local to each developer

--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,7 @@ out/
 .env.production.local
 
 # IDE
-.vscode/settings.json
-.vscode/launch.json
-.vscode/extensions.json
+.vscode/
 .idea/
 *.swp
 *.swo
