feat: set up Python FastAPI backend with comprehensive tooling
- Initialize Python project using uv package manager
- Configure pyproject.toml with FastAPI, boto3, pydantic dependencies
- Set up comprehensive development dependencies (pytest, black, isort, mypy)
- Create FastAPI application with CORS and security middleware
- Implement health check endpoints with proper error handling
- Add pytest configuration with 80% coverage requirement
- Configure code quality tools (black, isort, mypy, flake8)
- Fix datetime deprecation warnings for Python 3.13 compatibility
- Add comprehensive test suite with 100% coverage

Completed: Task 1.1.3 - Python FastAPI backend setup
All tests pass: 3/3 passing with 100% coverage

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,31 @@
-# Backend Environment Configuration
+# Cloud Explorer Backend Environment Configuration
+
+# Server Configuration
+HOST=0.0.0.0
+PORT=8000
+WORKERS=1
+DEBUG=true
+RELOAD=true
 
 # API Configuration
-API_HOST=localhost
-API_PORT=8000
-API_DEBUG=true
+API_V1_STR=/api/v1
+PROJECT_NAME=Cloud Explorer API
+VERSION=0.1.0
+
+# Security Configuration
+ALLOWED_HOSTS=["localhost", "127.0.0.1", "0.0.0.0"]
+CORS_ORIGINS=["http://localhost:3000", "http://127.0.0.1:3000"]
 
 # AWS Configuration
-AWS_PROFILE_PATH=~/.aws/
-AWS_REGION=us-east-1
+AWS_DEFAULT_REGION=us-east-1
+AWS_PROFILE=default
+
+# Logging Configuration
+LOG_LEVEL=INFO
+
+# Rate Limiting
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW=60
 
 # Cache Configuration
 REDIS_URL=redis://localhost:6379
