feat: comprehensive environment configuration management - Task 1.2.1 completed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,31 +1,36 @@
-# Cloud Explorer Backend Environment Configuration
+# Cloud Explorer Backend Environment Configuration Template
+# Copy this file to .env and customize for your environment
+# For development, you can also copy .env.development
+# For production, use .env.production as a starting point
+
+# =============================================================================
+# QUICK SETUP (Minimal configuration to get started)
+# =============================================================================
 
 # Server Configuration
 HOST=0.0.0.0
 PORT=8000
-WORKERS=1
 DEBUG=true
-RELOAD=true
-
-# API Configuration
-API_V1_STR=/api/v1
-PROJECT_NAME=Cloud Explorer API
-VERSION=0.1.0
-
-# Security Configuration
-ALLOWED_HOSTS=["localhost", "127.0.0.1", "0.0.0.0"]
-CORS_ORIGINS=["http://localhost:3000", "http://127.0.0.1:3000"]
 
 # AWS Configuration
 AWS_DEFAULT_REGION=us-east-1
 AWS_PROFILE=default
 
-# Logging Configuration
-LOG_LEVEL=INFO
+# Frontend Integration
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
-# Rate Limiting
-RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=60
+# Security (CHANGE IN PRODUCTION)
+SECRET_KEY=your-secret-key-here-change-in-production
+
+# =============================================================================
+# FULL CONFIGURATION OPTIONS
+# =============================================================================
+# For complete configuration options, see:
+# - .env.development (development settings)
+# - .env.production (production settings)
+#
+# You can copy either file to .env and customize as needed.
+# =============================================================================
 
 # Cache Configuration
 REDIS_URL=redis://localhost:6379
