--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,12 @@ out/
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
+
+# Logs
+logs/
+*.log
+log/
 
 # IDE
 .vscode/
