feat: Implement comprehensive security configuration (Task 1.2.2)
- Added security headers middleware (HSTS, CSP, X-Frame-Options, etc.)
- Implemented rate limiting with slowapi
- Enhanced CORS configuration with security best practices
- Added SSL/HTTPS support with self-signed certificate generation
- Updated environment configuration with security settings
- All security features tested and working correctly

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -2,20 +2,35 @@
 # Copy this file to .env for local development
 
 # =============================================================================
-# APPLICATION SETTINGS
+# CLOUD EXPLORER - DEVELOPMENT ENVIRONMENT CONFIGURATION
 # =============================================================================
 
-# Project Information
-PROJECT_NAME="Cloud Explorer API"
-VERSION="0.1.0"
-DESCRIPTION="AWS resource management and monitoring API"
+# Application Settings
+PROJECT_NAME=Cloud Explorer API
+DESCRIPTION=AWS resource management and monitoring API
+VERSION=0.1.0
+ENVIRONMENT=development
+DEBUG=true
 
 # Server Configuration
-HOST="0.0.0.0"
+HOST=0.0.0.0
 PORT=8000
-WORKERS=1
-DEBUG=true
 RELOAD=true
+WORKERS=1
+
+# Security Configuration
+HTTPS_ENABLED=false
+SECURITY_HEADERS_ENABLED=true
+RATE_LIMITING_ENABLED=true
+RATE_LIMIT_REQUESTS=100
+API_RATE_LIMIT_CONFIG=10
+API_RATE_LIMIT_HEALTH=60
+HSTS_MAX_AGE=31536000
+CSP_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:
+
+# SSL Configuration (for HTTPS development testing)
+SSL_CERT_PATH=certs/cert.pem
+SSL_KEY_PATH=certs/key.pem
 
 # API Configuration
 API_V1_STR="/api/v1"
