--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,12 @@ HOST=0.0.0.0
 PORT=8000
 DEBUG=true
 
+# Security Configuration
+HTTPS_ENABLED=false
+SECURITY_HEADERS_ENABLED=true
+RATE_LIMITING_ENABLED=true
+RATE_LIMIT_REQUESTS=100
+
 # AWS Configuration
 AWS_DEFAULT_REGION=us-east-1
 AWS_PROFILE=default
@@ -21,6 +27,10 @@ CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
 # Security (CHANGE IN PRODUCTION)
 SECRET_KEY=your-secret-key-here-change-in-production
+
+# SSL Configuration (for HTTPS development)
+SSL_CERT_PATH=certs/cert.pem
+SSL_KEY_PATH=certs/key.pem
 
 # =============================================================================
 # FULL CONFIGURATION OPTIONS
