--- a/backend/.env.production
+++ b/backend/.env.production
@@ -3,20 +3,35 @@
 # Override specific values using environment variables
 
 # =============================================================================
-# APPLICATION SETTINGS
+# CLOUD EXPLORER - PRODUCTION ENVIRONMENT CONFIGURATION
 # =============================================================================
 
-# Project Information
-PROJECT_NAME="Cloud Explorer API"
-VERSION="0.1.0"
-DESCRIPTION="AWS resource management and monitoring API"
+# Application Settings
+PROJECT_NAME=Cloud Explorer API
+DESCRIPTION=AWS resource management and monitoring API
+VERSION=0.1.0
+ENVIRONMENT=production
+DEBUG=false
 
 # Server Configuration
-HOST="0.0.0.0"
+HOST=0.0.0.0
 PORT=8000
-WORKERS=4
-DEBUG=false
 RELOAD=false
+WORKERS=4
+
+# Security Configuration (Production Hardened)
+HTTPS_ENABLED=true
+SECURITY_HEADERS_ENABLED=true
+RATE_LIMITING_ENABLED=true
+RATE_LIMIT_REQUESTS=60
+API_RATE_LIMIT_CONFIG=5
+API_RATE_LIMIT_HEALTH=30
+HSTS_MAX_AGE=31536000
+CSP_POLICY=default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self'
+
+# SSL Configuration (Production certificates)
+SSL_CERT_PATH=/etc/ssl/certs/cloudexplorer.pem
+SSL_KEY_PATH=/etc/ssl/private/cloudexplorer.key
 
 # API Configuration
 API_V1_STR="/api/v1"
