--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "python-multipart>=0.0.6",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
+    "slowapi>=0.1.9",
+    "cryptography>=41.0.0",
+    "redis>=5.0.0",
 ]
 
 [project.optional-dependencies]
