fix: Update CSP policy to allow Swagger UI external resources
- Fixed Content Security Policy blocking external CDN resources
- Added cdn.jsdelivr.net to script-src, style-src, and font-src
- Added fastapi.tiangolo.com to img-src for Swagger UI images
- Resolved Swagger UI not loading CSS, JS, and images from external sources
- Updated CSP policy in config.py and environment templates
- API documentation now fully accessible at /docs endpoint

The restrictive CSP policy was preventing Swagger UI from loading
external resources needed for proper rendering and functionality.
This fix maintains security while allowing necessary external resources.

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -26,7 +26,7 @@ RATE_LIMIT_REQUESTS=100
 API_RATE_LIMIT_CONFIG=10
 API_RATE_LIMIT_HEALTH=60
 HSTS_MAX_AGE=31536000
-CSP_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:
+CSP_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net; img-src 'self' data: fastapi.tiangolo.com; font-src 'self' cdn.jsdelivr.net; connect-src 'self'
 
 # SSL Configuration (for HTTPS development testing)
 SSL_CERT_PATH=certs/cert.pem
