--- a/backend/.env.production
+++ b/backend/.env.production
@@ -27,7 +27,7 @@ RATE_LIMIT_REQUESTS=60
 API_RATE_LIMIT_CONFIG=5
 API_RATE_LIMIT_HEALTH=30
 HSTS_MAX_AGE=31536000
-CSP_POLICY=default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self'
+CSP_POLICY=default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self'; font-src 'self'; connect-src 'self'
 
 # SSL Configuration (Production certificates)
 SSL_CERT_PATH=/etc/ssl/certs/cloudexplorer.pem
