--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "slowapi>=0.1.9",
     "cryptography>=41.0.0",
     "redis>=5.0.0",
+    "httpx>=0.28.1",
 ]
 
 [project.optional-dependencies]
